--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta charSet="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<link id="preconnect" rel="preconnect" href="" />
-		<meta id="refresh" http-equiv="refresh" content="0; URL='https://seven-times-design-9d9dc369a453.herokuapp.com/'" />
-		<link rel="canonical" href="https://seven-times-design-9d9dc369a453.herokuapp.com/">
+		<meta id="refresh" http-equiv="refresh" content="0; URL='https://seven-times-design.vercel.app/'" />
+		<link rel="canonical" href="https://seven-times-design.vercel.app/">
 		<meta name="description" content="Web Development, Brand Strategy, and Graphic Design" />
 
 		<!-- Open Graph / Facebook -->
